v0.6.3
- Updated to PVR API v2.1.0

v0.6.2
- Debian packaging: fix library install path
- Miscellaneous backend fixes

v0.6.1
- Updated to PVR API v2.0.0

v0.6.0
- Updated to PVR API v1.9.7

0.5.6
- Updated Language files from Transifex

0.5.5
- Correct android lib name

0.5.4
- Updated to use new libplatform-dev

0.5.3
- Populate new Recording/EPG fields in PVR API v1.9.5 and 1.9.6

0.5.2
- Updated to PVR API v1.9.5

0.5.1
- Updated to PVR API v1.9.4
- Updated to GUI API v5.8.0

0.4.4
- Updated Language files from Transifex

0.4.003
- Revise previous ServerWMC stream stuttering fix

0.4.002
- Updated Language files from Transifex
- Minor changes to conform with C++11

0.4.001
- Kodi 15 versions will now be numbered 0.4.*
- fix stuttering when using new ServerWMC streams of completed WTV recordings

0.3.111
- Updated Language files from Transifex

0.3.110
- added getBackendHostname function

0.3.109
- tidy up display of PVR data for Kodi (connection string, backend drive space total/used)
- add support for accepting HDHR streaming URLs for channels

0.3.108
- Updated Language files from Transifex

0.3.107
- change library name to Kodi

0.3.106
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

0.3.105
- Updated Language files from Transifex

0.3.104
- Updated Language files from Transifex

0.3.103
- rename addon in addon.xml file
- add support for TriggerEPGUpdate

0.3.102
- populate new subchannel field

0.3.101
- updated to API v1.9.2

0.3.100
- fix to XBMC->Log calls for clang compiler and general consistency
- fixed SignalStatus data

0.3.99
- manually trigger recordings refresh after XBMC calls SetPlayedCount

0.3.98
- add Wake On LAN support to wake the ServerWMC backend server
- store PlayCount/WatchedStatus of recordings in the backend so it can be shared by all clients

0.3.97 (XBMC 14 Helix)
- support receiving notifications from the backend
- add notification for new backend version available